--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "stylus": "^0.56.0",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "swiper": "^3.4.2"
   },
   "eslintConfig": {
     "root": true,
